# desktopquad

./: .gitmodules  CMakeLists.txt  README.md  package.xml
catkin_ws/src/desktopquad/: CMakeLists.txt
catkin_ws/src/desktopquad/doc/report/figures/: hex_sim_desired_vs_actual.eps
catkin_ws/src/desktopquad/include/lib/: dr_eigen_average.h  eigenmvn.h  mvnpdf.h
catkin_ws/src/desktopquad/include/mcl/: mcl.h  particle.h
catkin_ws/src/desktopquad/include/mcl/motionmodels/: mech.h  motion_model.h  sdncv.h
catkin_ws/src/desktopquad/include/tf_frames/: TFFrames.h
catkin_ws/src/desktopquad/launch/: hw_localize.launch  recorder.launch
catkin_ws/src/desktopquad/params/: localizer.yaml  map.yaml  platform.yaml
catkin_ws/src/desktopquad/rviz/: default.rviz
catkin_ws/src/desktopquad/src/mcl/: mcl.cpp  node.cpp
catkin_ws/src/desktopquad/src/tf_frames/: TFFrames.cpp  node.cpp
catkin_ws/src/desktopquad/src/waypoint_manager/: waypoint_manager.py
catkin_ws/src/desktopquad_sim/: CMakeLists.txt  package.xml
catkin_ws/src/desktopquad_sim/agents/chiny/: chiny.xacro  chiny.yaml  chiny_sil.xacro
catkin_ws/src/desktopquad_sim/include/desktopquad_sim/: platform_plugin.h
catkin_ws/src/desktopquad_sim/launch/: newsim.launch  sil.launch  sim.launch  spawn_platform.launch
catkin_ws/src/desktopquad_sim/media/: materials
catkin_ws/src/desktopquad_sim/models/aruco_mip_36h12_markermap/: model.config  model.sdf
catkin_ws/src/desktopquad_sim/models/aruco_mip_36h12_markermap/materials/textures/: README.md
catkin_ws/src/desktopquad_sim/models/at36h11_mosaic/: model.sdf
catkin_ws/src/desktopquad_sim/models/at36h11_mosaic/materials/scripts/: at36h11_mosaic.material
catkin_ws/src/desktopquad_sim/models/desktopquad/: model.config  model.sdf
catkin_ws/src/desktopquad_sim/params/: aruco_mip_36h12_markermap.yaml
catkin_ws/src/desktopquad_sim/rviz/: aruco.rviz
catkin_ws/src/desktopquad_sim/scripts/: state_plotter.py
catkin_ws/src/desktopquad_sim/src/: platform_plugin.cpp
catkin_ws/src/desktopquad_sim/urdf/: camera.xacro  platform.xacro
catkin_ws/src/desktopquad_sim/worlds/: platform.world
catkin_ws/src/particle_localization/: CMakeLists.txt  package.xml
catkin_ws/src/particle_localization/launch/: particle_localization.launch  particle_localization_sim.launch
catkin_ws/src/particle_localization/param/: particles.yaml
catkin_ws/src/particle_localization/scripts/: dynamics.py  particle_localization.py
desktopquad/: CMakeLists.txt  README.md
desktopquad/cfg/: Controller.cfg
desktopquad/include/diff_flat/: controller.h
desktopquad/src/controller/: controller.cpp
desktopquad/src/diff_flat/: controller.cpp
desktopquad/src/waypoint_manager/: waypoint_manager.py
desktopquad_pkgs/: CMakeLists.txt  package.xml
desktopquad_sim/: CMakeLists.txt  README.md
desktopquad_sim/agents/chiny/: chiny.xacro  chiny.yaml  chiny_controller.yaml
desktopquad_sim/launch/: multirotor.launch  sil.launch  sim.launch
desktopquad_sim/matlab/: rots.m
desktopquad_sim/models/aruco_mip_36h12_markermap/materials/scripts/: aruco_mip_36h12_markermap.material
desktopquad_sim/models/at36h11_mosaic/: model.config
desktopquad_sim/params/: waypoints.yaml
desktopquad_sim/rviz/: quad.rviz
desktopquad_sim/src/: tf_sim_frames.cpp
doc/report/: .gitignore  report.tex  report773.tex
doc/report/figures/: hex_sim_desired_vs_actual_diff_flat.eps  multirotor.eps  multirotor_forces.eps
include/controller/: controller.h
include/diff_flat/: controller.h
src/diff_flat/: controller.cpp  node.cpp
src/waypoint_manager/: waypoint_manager.py
