<?xml version="1.0"?>
<package format="2">
  <name>desktopquad_pkgs</name>
  <version>0.0.0</version>
  <description>The ROS package associated with the DesktopQuad project</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>

  <author email="parkerclusk@gmail.com">Parker Lusk</author>

  <license>BSD</license>

  <url type="repository">https://github.com/plusk01/desktopquad</url>
  <url type="bugtracker">https://github.com/plusk01/desktopquad/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
