<?xml version="1.0"?>
<package>
  <name>desktopquad_sim</name>
  <version>0.0.0</version>
  <description>The desktopquad_sim package</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/plusk01/desktopquad_sim</url>


  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

    <!-- change environment variable for models path -->
    <gazebo_ros gazebo_model_path="${prefix}/models" />

  </export>
</package>
